--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "all-the-cities": "^3.0.0",
+    "country-list": "^2.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.0",
     "request": "^2.88.0"
