--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
     "start": "node src/app.js"
   },
   "author": "",
@@ -14,6 +14,10 @@
     "country-list": "^2.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "webpack": "^4.43.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.11"
   }
 }
